# build_agent

./: .env.example  .gitignore  CLAUDE.md  PROMPT_MANAGEMENT_README.md  README.md  code_review_report.md  main.py  pyproject.toml  requirements.txt  setup_and_validate.py  test_agent_demo.py
.claude/: settings.local.json
config/: mcp_config.yaml  mcp_config_example.yaml  models_config.yaml  settings.yaml
examples/: basic_agent.py  custom_workflow.py  mcp_advanced_example.py  mcp_basic_example.py  model_comparison.py  multi_agent_collaboration.py  prompt_management_demo.py
prompts/templates/: base.yaml
prompts/templates/i18n/: ko.yaml
src/agents/: __init__.py  custom_agent.py  enhanced_react_agent.py  memory_agent.py  multi_agent.py  react_agent.py
src/config/: __init__.py  models_config.py
src/mcp/: MCP_README.md  __init__.py  adapter.py  client.py  config.py  exceptions.py  manager.py  registry.py  resources.py
src/models/: __init__.py  model_factory.py
src/prompts/: __init__.py  loaders.py  prompt_manager.py  templates.py  validators.py
src/tools/: __init__.py  basic_tools.py  tool_registry.py
src/workflows/: __init__.py  templates.py  workflow_builder.py
tests/: test_mcp_integration.py
