[project]
name = "build-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.0.0",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "black>=24.0.0",
    "httpx>=0.27.0",
    "ipython>=8.0.0",
    "jinja2>=3.1.0",
    "jsonrpc>=1.13.0",
    "jupyter>=1.0.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
]
